--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>test</title>
 	<meta charset="utf-8">
 </head>
-<body style='background-color:green;'>
+<body style='background-color:red;'>
 <p>Test</p>
 </body>
 </html>
