--- a/gad/index.html
+++ b/gad/index.html
@@ -2,8 +2,9 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://1drv.ms/p/s!Ap-4bZAGWChrkNIHDMhzMczQJsldhQ?e=N1ojiL" />
 </head>
-<body style='background-color:red;'>
-asdawsdawdfawd
+<body style='background-color:white;'>
+
 </body>
 </html>
