--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<title>test</title>
+	<title>nothin around here</title>
 	<meta charset="utf-8">
 </head>
 <body style='background-color:red;'>
-<p>Test</p>
+<p>lol</p>
 </body>
 </html>
