--- a/hl3/index.html
+++ b/hl3/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<meta http-equiv="refresh" content="0; url=https://1drv.ms/p/s!Ap-4bZAGWChrkaNnHOKG3gjmARZerQ?e=GyqRnj"/>
+	<meta http-equiv="refresh" content="0; url=https://1drv.ms/p/s!Ap-4bZAGWChrkaItArxKSudxBPksxw"/>
 </head>
 <body style='background-color:white;'>
 
