--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-	<title>nothin around here</title>
+	<title></title>
 	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/jakubsrna1/" />
 </head>
-<body style='background-color:red;'>
-<p>lol</p>
+<body style='background-color:white;'>
+
 </body>
 </html>
