--- a/dp/index.html
+++ b/dp/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 	<title></title>
+	<meta name="robots" content="noindex">
 	<meta charset="utf-8">
-	<meta http-equiv="refresh" content="0; url=https://1drv.ms/f/s!Ap-4bZAGWChrkdwOMU17wVUkQKqrrQ?e=cFBgOW" />
+	<meta http-equiv="refresh" content="0; url=https://srna.notion.site/DO-Pilates-Homepage-ef412d8520ca4e8598f5e1568bfe2007" />
 </head>
 <body style='background-color:white;'>
 
