--- a/avi/bls/index.html
+++ b/avi/bls/index.html
@@ -8,7 +8,7 @@
 
     <div class="navbar">
         <img class="logo" src="bluesound_logo.png" >
-        <button type="button">Kde Kúpiť?????</button>
+        <button type="button">Kde Kúpiť?</button>
     </div>
 
     <video id="header-video"
